# microsoft-agent-framework-samples

./: .env.example  .env.template  HITL_NOTES.md  NOTES.md  ORCHESTRATION_NOTES.md  README.md  TOOL_CALLING.md  VERSION_NOTES.md  blog_post.md  pyproject.toml  submitted_blog_post.md  traces.jsonl  workflow.json
introspection/: agent_introspection.ipynb  executor_introspection.ipynb  executors.ipynb  tool_introspection.ipynb
samples/: agent_chat_completion.py  agent_chat_completion_with_custom_context.py  agent_chat_completion_with_session.py  agent_chat_completion_with_tool.py  agent_github_mcp_access_subagent_skill.py  agent_gitlab_mcp_access_subagent_skill.py  agent_mcp_access.py  agent_middleware.py  agent_orchestration.py  agent_skill.py  blog_post.md  gitlab_proxy_wrapper.py  hitl_agents.py  hitl_executors.py  mcp_test.py  multi_agent_blog_post.py  multi_agent_workflow_input.py  observability.py  utils.py  workflow_executors.py  workflow_executors_with_agent.py  workflow_executors_with_agent_streaming.py
samples/skills/blog-writer/: SKILL.md  SKILLmd
samples/skills/blog-writer/assets/: blog_post_template.md  template.md
samples/skills/blog-writer/references/: blog_post_information.txt
samples/skills/github/: SKILL.md
samples/skills/gitlab/: SKILL.md
samples/tools/: pdf.py  submit_blog_post.py
samples/types/: span.py
samples/use-cases/one/: README.md  utils.py  workflow.py  workflow_parallel.py
samples/use-cases/one_simplified/: README.md  workflow.py  workflow_with_request_info.py
samples/utils/: create_permit_pdf.py
(+9 files in other folders)
